[LOGIN] update login form

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Index</title>
     <link rel="stylesheet" href="./index.css" type="text/css">
 </head>
-<body>
+<body><h1>HEllo</h1>
     <div class="warper">
         <div class="header">
             <div class="main">
